Changing the order of vertex groups changes the specified vertex group in the modifier #113803

Closed
opened 2023-10-17 05:21:38 +02:00 by niu · 4 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version.
Broken: version: 3.6.5 Release Candidate, branch: blender-v3.6-release, commit date: 2023-10-12 12:38, hash: 521a68323c53.
Worked: None

Short description of error.
Changing the vertex group order changes the specified vertex group in the modifier.

Exact steps for others to reproduce the error

  1. Create multiple vertex groups in the mesh.
  2. Add a cloth modifier and specify any vertex groups in PinGroup and Property Weights.
  3. Change the order of vertex groups in the mesh.
  4. The vertex group specified in the modifier is replaced by another vertex group.

This is not a serious bug, but it is a behavior that has plagued us since very old versions.
If this is a bug, we would like to have it fixed.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 **Blender Version**. Broken: version: 3.6.5 Release Candidate, branch: blender-v3.6-release, commit date: 2023-10-12 12:38, hash: `521a68323c53`. Worked: None **Short description of error**. Changing the vertex group order changes the specified vertex group in the modifier. **Exact steps for others to reproduce the error** 1. Create multiple vertex groups in the mesh. 2. Add a cloth modifier and specify any vertex groups in PinGroup and Property Weights. 3. Change the order of vertex groups in the mesh. 4. The vertex group specified in the modifier is replaced by another vertex group. This is not a serious bug, but it is a behavior that has plagued us since very old versions. If this is a bug, we would like to have it fixed.
niu added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-17 05:21:39 +02:00
Iliya Katushenock added the
Interest
Modeling
label 2023-10-17 13:52:41 +02:00
Member

Cannot reproduce here (these relation should be name-based only).

Does this happen in any file? (if not, please share the file in question)
Does this happen with Factory Defaults?

Cannot reproduce here (these relation should be name-based only). Does this happen in any file? (if not, please share the file in question) Does this happen with Factory Defaults?
Philipp Oeser added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-10-17 14:04:52 +02:00
Author

I was told that it would not reproduce, so I checked,
It seems to occur in Japanese language settings.
Perhaps the vertex group names are created in the specified language and are not interpreted internally.
https://youtu.be/0ky20on8aic

I was told that it would not reproduce, so I checked, It seems to occur in Japanese language settings. Perhaps the vertex group names are created in the specified language and are not interpreted internally. https://youtu.be/0ky20on8aic

I can confirm even with manually renamed vertex group for rus lang.

I can confirm even with manually renamed vertex group for rus lang.
Iliya Katushenock added the
Interest
Translations
label 2023-10-18 08:43:29 +02:00
Damien Picard removed the
Interest
Translations
label 2024-02-08 18:39:39 +01:00
Member

Here is a file to reproduce the issue.

Moving the Bending vertex group up or down will change the assigned group in the Shear or Shrinking group in the cloth Property Weights panel.

reorder_cloth_vertex_group.blend

Here is a file to reproduce the issue. Moving the Bending vertex group up or down will change the assigned group in the Shear or Shrinking group in the cloth Property Weights panel. <video src="/attachments/e9722c2f-07be-40b1-bacc-9b1ab2ebbb43" title="reorder_groups1.mp4" controls></video> [reorder_cloth_vertex_group.blend](/attachments/c8b7150a-10ff-4930-ac29-17f4332a066b)
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-09 15:39:24 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113803
No description provided.